packages/lang/test/__golden__/config-errors/allow-hosts-missing-hosts-keyword.txt
error[TF010]: expected `hosts`, found string "api.example.com"
 --> tflw.config:2:9
  |
2 |   allow "api.example.com"
  |         ^^^^^^^^^^^^^^^^^
